--- a/elements.html
+++ b/elements.html
@@ -4,7 +4,7 @@
 <div>
 	<div>
 		<div>
-			<a href="http://skilshare.com">Visit Skillshare</a>
+			<a href="http://www.skilshare.com">Visit Skillshare</a>
 		</div>
 	</div>
 </div>
