Chnage "a-tag" "target attribute"

--- a/elements.html
+++ b/elements.html
@@ -4,7 +4,7 @@
 <div>
 	<div>
 		<div>
-			<a href="https://www.skillshare.com/home">Visit Skillshare</a>
+			<a href="https://www.skillshare.com/home" target="_blank">Visit Skillshare</a>
 		</div>
 	</div>
 </div>
