--- a/elements.html
+++ b/elements.html
@@ -11,4 +11,4 @@
 
 <p>Hey there, my name is:<br>Joseph</p>
 
-<img src="emoji1.png">
+<img src="http://static1.squarespace.com/static/5018d08ae4b0a463fb2fc659/t/546175abe4b011fe10901497/1418889965591/">
