--- a/elements.html
+++ b/elements.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Website</title>
+</head>
+<body>
+
 <h1>Heading 1</h1>
 <h2>Heading 2</h2>
 <p>This is the first paragraph</p>
@@ -12,3 +19,7 @@
 <p>Hey there, my name is:<br>Joseph</p>
 
 <img src="http://static1.squarespace.com/static/5018d08ae4b0a463fb2fc659/t/546175abe4b011fe10901497/1418889965591/">
+
+</body>
+
+</html>
