--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 			<h1>Genji</h1>
 			<div class="content">
 			<h2>About Genji</h2>
-			<p>blah, blah, blah</p>
-			<h3>Overwatch</h3>
-			<h3>Play Overwatch</h3>
+			<p>Genji is a video game character that is playable in a new(ish) game called "Overwatch".<br> He is a robo-ninja with a knockout-awesome dragonblade,<br> glowing green, super-sharp shurikens that travel at an<br> amazing pace around the Overwatch battle field.</p>
+				<div class="miniSection1">
+					<h3>Overwatch</h3>
+					<p></p>
+				</div>
+				<div class="miniSection2">
+					<h3>Play Overwatch</h3>
+					<p></p>
+				</div>
 			<footer>
 				<a href=""></a>
 				<a href=""></a>
