Finished off the text

--- a/index.html
+++ b/index.html
@@ -10,26 +10,25 @@
 		<header>
 			<img src="img/profile.jpg">
 			<h1>Genji</h1>
-			<div class="content">
+		</header>
+		<div class="content">
 			<h2>About Genji</h2>
 			<p>Genji is a video game character that is playable in a new(ish) game called "Overwatch".<br> He is a robo-ninja with a knockout-awesome dragonblade,<br> glowing green, super-sharp shurikens that travel at an<br> amazing pace around the Overwatch battle field.</p>
 				<div class="miniSection1">
 					<h3>Overwatch</h3>
-					<p></p>
+					<p>Overwatch is a team-based video game which involves the ability to aim well. In this game you chose from one of many characters to play as, like Genji. Each character has it's "ups" and "donws", so no character is better than any other. Overwatch is played online with 6v6 teams battling and capturing checkpoints to progress</p>
 				</div>
 				<div class="miniSection2">
-					<h3>Play Overwatch</h3>
-					<p></p>
+					<h3>Play Overwatch?</h3>
+					<p>Overwatch is avilable on the PC, Xbox 1 and PS4.<br> You can download and play Overwatch from<br> the link listed in the footer below.</p>
 				</div>
 			<footer>
-				<a href=""></a>
-				<a href=""></a>
-				<a href=""></a>
+				<a href="https://playoverwatch.com/en-gb/">Download Overwatch</a>
+				<a href="">More of this content</a>
+				<a href="">About</a>
 			</footer>
 
 			</div>
-
-		</header>
 	</div>
 
 </body>
