--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<p>Genji is a video game character that is playable in a new(ish) game called "Overwatch".<br> He is a robo-ninja with a knockout-awesome dragonblade,<br> glowing green, super-sharp shurikens that travel at an<br> amazing pace around the Overwatch battle field.</p>
 				<div class="miniSection1">
 					<h3>Overwatch</h3>
-					<p>Overwatch is a team-based video game which involves the ability to aim well.<br> In this game you chose from one of many characters to play as, like Genji.<br> Each character has it's "ups" and "donws", so no character<br> is better than any other. Overwatch is played online with 6v6 teams<br> battling and capturing checkpoints to progress</p>
+					<p>Overwatch is a team-based video game which involves the ability to aim well.<br> In this game you chose from one of many characters to play as, like Genji.<br> Each character has it's "ups" and "donws", so no character<br> is better than any other. Overwatch is played online with 6v6 teams<br> battling and capturing checkpoints to progress in the match.</p>
 				</div>
 				<div class="miniSection2">
 					<h3>Play Overwatch?</h3>
