--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<p>Overwatch is avilable on the PC, Xbox 1 and PS4.<br> You can download and play Overwatch from<br> the link listed in the footer below.</p>
 				</div>
 			<footer>
-				<a href="https://playoverwatch.com/en-gb/">Download Overwatch</a>
+				<a href="https://playoverwatch.com/en-gb/" target="blank_">Download Overwatch</a>
 				<a href="">More of this content</a>
 				<a href="">About</a>
 			</footer>
