Ai I did alottttt!

--- a/index.html
+++ b/index.html
@@ -14,19 +14,30 @@
 		<div class="content">
 			<h2>About Genji</h2>
 			<p>Genji is a video game character that is playable in a new(ish) game called "Overwatch".<br> He is a robo-ninja with a knockout-awesome dragonblade,<br> glowing green, super-sharp shurikens that travel at an<br> amazing pace around the Overwatch battle field.</p>
+			<img src="img/big-image.jpg" class="big image">
 				<div class="miniSection1">
-					<h3>Overwatch</h3>
-					<p>Overwatch is a team-based video game which involves the ability to aim well.<br> In this game you chose from one of many characters to play as, like Genji.<br> Each character has it's "ups" and "donws", so no character<br> is better than any other. Overwatch is played online with 6v6 teams<br> battling and capturing checkpoints to progress in the match.</p>
+					<p>
+					Overwatch is a team-based video game which involves the ability to aim well. In this game you chose from one of many characters to play as, like Genji. Each character has it's "ups" and "donws", so no character is better than any other. Overwatch is played online with 6v6 teams battling and capturing checkpoints to progress in the match.
+					</p>
 				</div>
 				<div class="miniSection2">
-					<h3>Play Overwatch?</h3>
-					<p>Overwatch is avilable on the PC, Xbox 1 and PS4.<br> You can download and play Overwatch from<br> the link listed in the footer below.</p>
+					<h3>Want to play Overwatch?</h3>
+
+					<ul><li>Avilable for the <a href="https://en.wikipedia.org/wiki/Personal_computer" target="_blank" title="What?">PC</a>, <a href="http://www.xbox.com/en-ZA/xbox-one" title="Xbox One?" target="_blank">Xbox 1</a> and <a href="https://www.playstation.com/en-us/explore/ps4/" target="_blank" title="PS4?">PS4</a>.</li> <li><a href="https://playoverwatch.com/en-gb/" target="_blank" title="Overwatch Website">Buy Overwatch.</a></li>
+					<li><a href="http://eu.battle.net/en/" target="_blank" title="Create an Overwatch acount">Create an acount.</a></li>
+					<li><a href="https://playoverwatch.com/en-us/game/" target="_blank" title="Overwatch Gameplay">PLAY!</a></li>
+					</ul>
+
+					<img src="img/gameplay.jpg">
+					<p class="caption">Overwatch in action!</p>
 				</div>
-			<footer>
-				<a href="https://playoverwatch.com/en-gb/" target="blank_">Download Overwatch</a>
-				<a href="">More of this content</a>
-				<a href="">About</a>
-			</footer>
+				<div class="footer">
+					<footer>
+						<a href="https://playoverwatch.com/en-gb/" target="_blank" title="Overwatch Website">Download Overwatch</a>
+						<a href="">More of this content</a>
+						<a href="">About</a>
+					</footer>
+				</div>
 
 			</div>
 	</div>
